--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 
 programy/nauka_gsm/dane na router.txt
 programy/merged_slave_master/v2/mergred_slave_master_v2/authData.h
+programy/web/PHP/connect_data.php
