v3, no tinyGSM, only AT

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 programy/nauka_gsm/dane na router.txt
 programy/merged_slave_master/v2/mergred_slave_master_v2/authData.h
 programy/web/PHP/connect_data.php
+programy/merged_slave_master/v3/mergred_slave_master_v3/authData.h
