--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 kod_serwer/web/PHP/connect_data.php
 kod mikrokontroler/mergred_slave_master_v3/authData.h
 kod mikrokontroler/mergred_slave_master_v3/authData.h
+kod_serwer/web/PHP/connect_dataSerw.php
+kod_serwer/web/PHP/connect_dataLocal.php
