początki v4 (no sleep, non blocking loop with gsm itp)
non blocking gsm init (oby)

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ kod mikrokontroler/mergred_slave_master_v3/authData.h
 kod mikrokontroler/mergred_slave_master_v3/authData.h
 kod_serwer/web/PHP/connect_dataSerw.php
 kod_serwer/web/PHP/connect_dataLocal.php
+kod mikrokontroler/mergred_slave_master_v4/authData.h
